auth service registry

--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=auth-service
+
+#port
+server.port=9092
+
+#eureka setups
+eureka.client.serviceUrl.defaultZone=http://localhost:9090/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
