--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -7,3 +7,11 @@ server.port=9092
 eureka.client.serviceUrl.defaultZone=http://localhost:9090/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
+
+#sql connection
+spring.datasource.url=jdbc:mysql://localhost:3306/auth_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.hibernaspring.jpa.properties.hibernate.format_sql=true;
