added the ticket service with proper impl

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
   <modules>
   	<module>eureka-server</module>
   	<module>auth-service</module>
+  	<module>ticket-service</module>
   </modules>
   <parent>
     <groupId>org.springframework.boot</groupId>
