--- a/ticket-service/src/main/resources/application.properties
+++ b/ticket-service/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=ticket-service
+
+server.port=9093
+
+#eureka sEtup
+eureka.client.register-with-eureka=true
+eureka.client.serviceUrl.defaultZone=http://localhost:9090/eureka/
+
+
+#db connections
+spring.data.mongodb.uri=mongodb://localhost:27017/ticketSystem
+
