--- a/ticket-service/src/main/resources/application.properties
+++ b/ticket-service/src/main/resources/application.properties
@@ -8,5 +8,6 @@ eureka.client.serviceUrl.defaultZone=http://localhost:9090/eureka/
 
 
 #db connections
-spring.data.mongodb.uri=mongodb://localhost:27017/ticketSystem
-
+spring.mongodb.host=localhost
+spring.mongodb.port=27017
+spring.mongodb.database=ticketSystem
