Added the intializations of setups

--- a/assignment-service/src/main/resources/application.properties
+++ b/assignment-service/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=assignment-service
+
+#eureka
+eureka.client.serviceUrl.defaultZone=https://localhost:9090/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
+
