--- a/assignment-service/src/main/resources/application.properties
+++ b/assignment-service/src/main/resources/application.properties
@@ -5,4 +5,15 @@ eureka.client.serviceUrl.defaultZone=https://localhost:9090/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
+server.port=9094
+
+#sql connection
+spring.datasource.url=jdbc:mysql://localhost:3306/ticket_assignment_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.hibernaspring.jpa.properties.hibernate.format_sql=true;
+
+
 
