--- a/assignment-service/src/main/resources/application.properties
+++ b/assignment-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=assignment-service
 
 #eureka
-eureka.client.serviceUrl.defaultZone=https://localhost:9090/eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:9090/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
@@ -14,6 +14,7 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.hibernaspring.jpa.properties.hibernate.format_sql=true;
+spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Kolkata
 
 
 
