--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
   	<module>eureka-server</module>
   	<module>auth-service</module>
   	<module>ticket-service</module>
+  	<module>notification-service</module>
   </modules>
   <parent>
     <groupId>org.springframework.boot</groupId>
