--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -1,1 +1,43 @@
 spring.application.name=notification-service
+
+#port
+server.port=9095
+
+#eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:9090/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
+
+#mail services
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=virupavaraprasad22@gmail.com
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Admin email for SLA alerts
+notification.admin.email=virupavaraprasad22@gmail.com
+
+
+
+# RabbitMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+# MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/notification_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+
+
+
+
+
+
