--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -20,3 +20,11 @@ spring.jpa.hibernaspring.jpa.properties.hibernate.format_sql=true;
 #jwt token
 jwt.secret= abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ123
 jwt.expiration: 3600000
+
+
+#rabbitMq
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
