--- a/ticket-service/src/main/resources/application.properties
+++ b/ticket-service/src/main/resources/application.properties
@@ -11,3 +11,10 @@ eureka.client.serviceUrl.defaultZone=http://localhost:9090/eureka/
 spring.mongodb.host=localhost
 spring.mongodb.port=27017
 spring.mongodb.database=ticketSystem
+
+#rabbitMq
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
