--- a/assignment-service/src/main/resources/application.properties
+++ b/assignment-service/src/main/resources/application.properties
@@ -17,4 +17,11 @@ spring.jpa.hibernaspring.jpa.properties.hibernate.format_sql=true;
 spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Kolkata
 
 
+#rabbitMq
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+
 
