--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -13,7 +13,7 @@ eureka.client.fetch-registry=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=virupavaraprasad22@gmail.com
-spring.mail.password=
+spring.mail.password=vqaw fqfi axog xdee
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
