--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -12,5 +12,9 @@
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
     </dependency>
-</dependencies>
+    <dependency>
+    	<groupId>org.springframework.boot</groupId>
+    	<artifactId>spring-boot-devtools</artifactId>
+    </dependency>
+  </dependencies>
 </project>
