--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.application.name=eureka-server
 #eureka configuration
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+eureka.client.service-url.defaultZone=http://localhost:9090/eureka/
