--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,1 +1,32 @@
 spring.application.name=api-gateway
+server.port=9091
+
+# Eureka
+eureka.client.service-url.defaultZone=http://localhost:9090/eureka
+eureka.instance.prefer-ip-address=true
+
+# Gateway discovery
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+
+# Routes
+spring.cloud.gateway.routes[0].id=auth-service
+spring.cloud.gateway.routes[0].uri=lb://AUTH-SERVICE
+spring.cloud.gateway.routes[0].predicates[0]=Path=/auth/**
+
+spring.cloud.gateway.routes[1].id=assignment-service
+spring.cloud.gateway.routes[1].uri=lb://ASSIGNMENT-SERVICE
+spring.cloud.gateway.routes[1].predicates[0]=Path=/assignments/**,/sla-events/**
+
+spring.cloud.gateway.routes[2].id=ticket-service
+spring.cloud.gateway.routes[2].uri=lb://TICKET-SERVICE
+spring.cloud.gateway.routes[2].predicates[0]=Path=/tickets/**
+
+#spring.cloud.gateway.routes[3].id=notification-service
+#spring.cloud.gateway.routes[3].uri=lb://NOTIFICATION-SERVICE
+#spring.cloud.gateway.routes[3].predicates[0]=Path=/notification/**
+
+# JWT (MUST MATCH AUTH SERVICE)
+jwt.secret= abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ123
+jwt.expiration: 3600000
+
