--- a/assignment-service/src/main/resources/application.properties
+++ b/assignment-service/src/main/resources/application.properties
@@ -4,9 +4,10 @@ spring.application.name=assignment-service
 eureka.client.serviceUrl.defaultZone=http://localhost:9090/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-
+eureka.instance.prefer-ip-address=true
 server.port=9094
-
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 #sql connection
 spring.datasource.url=jdbc:mysql://localhost:3306/ticket_assignment_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
