--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -7,7 +7,9 @@ server.port=9092
 eureka.client.serviceUrl.defaultZone=http://localhost:9090/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-
+eureka.instance.prefer-ip-address=true
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 #sql connection
 spring.datasource.url=jdbc:mysql://localhost:3306/auth_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
