--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -7,8 +7,9 @@ server.port=9095
 eureka.client.serviceUrl.defaultZone=http://localhost:9090/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-
-
+eureka.instance.prefer-ip-address=true
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 #mail services
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
