--- a/ticket-service/src/main/resources/application.properties
+++ b/ticket-service/src/main/resources/application.properties
@@ -5,8 +5,9 @@ server.port=9093
 #eureka sEtup
 eureka.client.register-with-eureka=true
 eureka.client.serviceUrl.defaultZone=http://localhost:9090/eureka/
-
-
+eureka.instance.prefer-ip-address=true
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 #db connections
 spring.mongodb.host=localhost
 spring.mongodb.port=27017
