--- a/ticket-service/src/main/resources/application.properties
+++ b/ticket-service/src/main/resources/application.properties
@@ -1,21 +1,22 @@
 spring.application.name=ticket-service
-
-server.port=9093
-
-#eureka sEtup
-eureka.client.register-with-eureka=true
-eureka.client.serviceUrl.defaultZone=http://localhost:9090/eureka/
-eureka.instance.prefer-ip-address=true
-spring.cloud.gateway.discovery.locator.enabled=true
-spring.cloud.gateway.discovery.locator.lower-case-service-id=true
-#db connections
-spring.mongodb.host=localhost
-spring.mongodb.port=27017
-spring.mongodb.database=ticketSystem
-
-#rabbitMq
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
-
+#
+#server.port=9093
+#
+##eureka sEtup
+#eureka.client.register-with-eureka=true
+#eureka.client.serviceUrl.defaultZone=http://localhost:9090/eureka/
+#eureka.instance.prefer-ip-address=true
+#spring.cloud.gateway.discovery.locator.enabled=true
+#spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+##db connections
+#spring.mongodb.host=localhost
+#spring.mongodb.port=27017
+#spring.mongodb.database=ticketSystem
+#
+##rabbitMq
+#spring.rabbitmq.host=localhost
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
+#
+spring.config.import=configserver:http://localhost:8888
