--- a/assignment-service/src/main/resources/application.properties
+++ b/assignment-service/src/main/resources/application.properties
@@ -1,28 +1,30 @@
 spring.application.name=assignment-service
+#
+##eureka
+#eureka.client.serviceUrl.defaultZone=http://localhost:9090/eureka
+#eureka.client.register-with-eureka=true
+#eureka.client.fetch-registry=true
+#eureka.instance.prefer-ip-address=true
+#server.port=9094
+#spring.cloud.gateway.discovery.locator.enabled=true
+#spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+##sql connection
+#spring.datasource.url=jdbc:mysql://localhost:3306/ticket_assignment_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.hibernaspring.jpa.properties.hibernate.format_sql=true;
+#spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Kolkata
+#
+#
+##rabbitMq
+#spring.rabbitmq.host=localhost
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
+#
+#
+#
 
-#eureka
-eureka.client.serviceUrl.defaultZone=http://localhost:9090/eureka
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-eureka.instance.prefer-ip-address=true
-server.port=9094
-spring.cloud.gateway.discovery.locator.enabled=true
-spring.cloud.gateway.discovery.locator.lower-case-service-id=true
-#sql connection
-spring.datasource.url=jdbc:mysql://localhost:3306/ticket_assignment_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.hibernaspring.jpa.properties.hibernate.format_sql=true;
-spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Kolkata
-
-
-#rabbitMq
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
-
-
-
+spring.config.import=configserver:http://localhost:8888
