--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
   	<module>auth-service</module>
   	<module>ticket-service</module>
   	<module>notification-service</module>
+  	<module>config-server</module>
   </modules>
   <parent>
     <groupId>org.springframework.boot</groupId>
