--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.application.name=eureka-server
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.client.service-url.defaultZone=http://localhost:9090/eureka/
+spring.devtools.restart.enabled=false
