--- a/api-gateway/src/main/resources/application-docker.yml
+++ b/api-gateway/src/main/resources/application-docker.yml
@@ -1,10 +1,6 @@
-server:
-  port: 9091
-
 spring:
   application:
     name: api-gateway
-
   cloud:
     gateway:
       discovery:
@@ -26,6 +22,14 @@ spring:
           uri: lb://TICKET-SERVICE
           predicates:
             - Path=/tickets/**
+
+        # - id: notification-service
+        #   uri: lb://NOTIFICATION-SERVICE
+        #   predicates:
+        #     - Path=/notification/**
+
+server:
+  port: 9091
 
 eureka:
   client:
