--- a/assignment-service/src/main/resources/application-docker.yml
+++ b/assignment-service/src/main/resources/application-docker.yml
@@ -2,4 +2,7 @@ spring:
   application:
     name: assignment-service
   config:
-    import: configserver:http://config-server:8888
+    import: "configserver:http://config-server:8888"
+  cloud:
+    config:
+      fail-fast: true
