--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -29,10 +29,13 @@ spring.application.name=auth-service
 #spring.rabbitmq.port=5672
 #spring.rabbitmq.username=guest
 #spring.rabbitmq.password=guest
+
 #
+spring.config.activate.on-profile=default
 spring.config.import=configserver:http://localhost:8888
 
 
+spring.cloud.config.enabled=true
 
 
 
