--- a/notification-service/src/main/resources/application-docker.yml
+++ b/notification-service/src/main/resources/application-docker.yml
@@ -15,7 +15,7 @@ spring:
             enable: true
 
   rabbitmq:
-    host: localhost
+    host: rabbitmq
     port: 5672
     username: guest
     password: guest
