--- a/ticket-service/src/main/resources/application.properties
+++ b/ticket-service/src/main/resources/application.properties
@@ -19,4 +19,12 @@ spring.application.name=ticket-service
 #spring.rabbitmq.username=guest
 #spring.rabbitmq.password=guest
 #
-spring.config.import=configserver:http://localhost:8888
+spring.config.import=optional:configserver:http://localhost:8888
+assignment.service.url=http://localhost:9094
+auth.service.url=http://localhost:9092
+
+resilience4j.circuitbreaker.instances.ticket-service.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.ticket-service.minimumNumberOfCalls=5
+resilience4j.circuitbreaker.instances.ticket-service.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.ticket-service.waitDurationInOpenState=10s
+resilience4j.circuitbreaker.instances.ticket-service.permittedNumberOfCallsInHalfOpenState=3
