--- a/assignment-service/src/main/resources/application.properties
+++ b/assignment-service/src/main/resources/application.properties
@@ -1,29 +1,12 @@
 spring.application.name=assignment-service
-#
-##eureka
-#eureka.client.serviceUrl.defaultZone=http://localhost:9090/eureka
-#eureka.client.register-with-eureka=true
-#eureka.client.fetch-registry=true
-#eureka.instance.prefer-ip-address=true
-#server.port=9094
-#spring.cloud.gateway.discovery.locator.enabled=true
-#spring.cloud.gateway.discovery.locator.lower-case-service-id=true
-##sql connection
-#spring.datasource.url=jdbc:mysql://localhost:3306/ticket_assignment_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.hibernaspring.jpa.properties.hibernate.format_sql=true;
-#spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Kolkata
-#
-#
-##rabbitMq
-#spring.rabbitmq.host=localhost
-#spring.rabbitmq.port=5672
-#spring.rabbitmq.username=guest
-#spring.rabbitmq.password=guest
-#
-#
-#
-spring.config.import=configserver:http://localhost:8888
+
+spring.config.import=optional:configserver:http://localhost:8888
+
+logging.level.org.springframework.boot.context.config=DEBUG
+ticket.service.url=http://localhost:9093
+auth.service.url=http://localhost:9092
+resilience4j.circuitbreaker.instances.assignment-service.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.assignment-service.minimumNumberOfCalls=5
+resilience4j.circuitbreaker.instances.assignment-service.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.assignment-service.waitDurationInOpenState=10s
+resilience4j.circuitbreaker.instances.assignment-service.permittedNumberOfCallsInHalfOpenState=3
