--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -1,41 +1,7 @@
 spring.application.name=auth-service
-#
-##port
-#server.port=9092
-#
-##eureka setups
-#eureka.client.serviceUrl.defaultZone=http://localhost:9090/eureka/
-#eureka.client.register-with-eureka=true
-#eureka.client.fetch-registry=true
-#eureka.instance.prefer-ip-address=true
-#spring.cloud.gateway.discovery.locator.enabled=true
-#spring.cloud.gateway.discovery.locator.lower-case-service-id=true
-##sql connection
-#spring.datasource.url=jdbc:mysql://localhost:3306/auth_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.hibernaspring.jpa.properties.hibernate.format_sql=true;
-#
-#
-##jwt token
-#jwt.secret= abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ123
-#jwt.expiration: 3600000
-#
-#
-##rabbitMq
-#spring.rabbitmq.host=localhost
-#spring.rabbitmq.port=5672
-#spring.rabbitmq.username=guest
-#spring.rabbitmq.password=guest
 
-#
-spring.config.activate.on-profile=default
-spring.config.import=configserver:http://localhost:8888
+spring.config.import=optional:configserver:http://localhost:8888
 
-
-spring.cloud.config.enabled=true
 
 
 
